add message dependency
git-svn-id: https://roboticssrv.wtb.tue.nl/svn/ros/trunk/amigo_ref_interpolator@26586 3a3c2cfb-d3b9-409e-9e75-db8fcdbcaac6

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,7 +20,8 @@ include_directories(
 add_library(interpolator_lib
   src/interpolator.cpp
 )
-
 target_link_libraries(interpolator_lib
   ${catkin_LIBRARIES}
 )
+
+add_dependencies(interpolator_lib ${catkin_EXPORTED_TARGETS})
